# Streaming

./: .gitattributes  .gitignore  README.md
app/: .env  index.html  package-lock.json  package.json  svelte.config.js
app.v2/: README.md  vite.config.ts
app.v2/src/: app.html
app.v2/src/routes/: +layout.svelte  Navbar.svelte  style.css  types.d.ts
app.v2/src/routes/settings/: +page.svelte
app/src/: App.tsx  index.css
app/src/components/: AllFiles.tsx  Home.tsx  Navbar.tsx  Player.tsx  Settings.tsx  Sidebar.tsx
app/src/context/: MediaDataContext.tsx
app/src/routes/: +layout.svelte  +page.svelte  Message.svelte  Navbar.svelte  style.css  toast.ts  types.d.ts  userData.ts
app/src/routes/movie/[id]/: +page.svelte
app/src/routes/settings/: +page.svelte
server/: CMakeLists.txt  go.mod  go.sum  main.go
server.v2/: CMakeLists.txt
server.v2/include/: streamer.hpp
server.v2/src/: json.cpp  main.cpp  streamer.cpp
server/controller/: dirStruct.go  media.go  userData.go
server/httpserver/: httpServer.go
server/include/: streamer.hpp
server/mediaserver/: mediaServer.go
server/src/: json.cpp  streamer.cpp
server/types/: mediaData.go  res.go  userData.go
